--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "daisyui": "^3.1.7",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
