--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
-        "vue": "^3.2.41"
+        "vue": "^3.2.36"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
@@ -24,6 +24,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
         "@fortawesome/free-regular-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
-        "@fortawesome/vue-fontawesome": "^3.0.3"
+        "@fortawesome/vue-fontawesome": "^3.0.3",
+        "gsap": "^3.12.2"
     }
 }
