--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,41 @@
-version: '3'
 services:
-    laravel.test:
-        build:
-            context: ./vendor/laravel/sail/runtimes/8.2
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: sail-8.2/app
-        extra_hosts:
-            - 'host.docker.internal:host-gateway'
-        ports:
-            - '${APP_PORT:-80}:80'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
-            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
-            IGNITION_LOCAL_SITES_PATH: '${PWD}'
+    nginx:
+        image: nginx:stable-alpine
+        container_name: ${DB_DATABASE}_nginx
+        restart: always
         volumes:
-            - '.:/var/www/html'
-        networks:
-            - sail
-        depends_on:
-            - mysql
-            - redis
-            - meilisearch
-            - mailpit
-            - selenium
-    mysql:
-        image: 'mysql/mysql-server:8.0'
+            - ./:/var/www
+            - ./_docker/nginx/conf.d:/etc/nginx/conf.d
         ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+            - "8876:80"
+        depends_on:
+            - app
+        networks:
+            - app_network
+
+    app:
+        build:
+            context: .
+            dockerfile: _docker/app/Dockerfile
+            args:
+                WWW_USER: '${WWW_USER}'
+                WWW_GROUP: '${WWW_GROUP}'
+        container_name: ${DB_DATABASE}_app
+        restart: always
+        volumes:
+            - ./:/var/www
+        depends_on:
+            db:
+                condition: service_healthy
+        networks:
+            - app_network
+
+    db:
+        image: mysql:8.4
+        container_name: ${DB_DATABASE}_db
+        restart: always
+        volumes:
+            - db-data:/var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ROOT_HOST: '%'
@@ -39,73 +43,40 @@ services:
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
-        volumes:
-            - 'sail-mysql:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
-        networks:
-            - sail
+        ports:
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        command:
+            - --character-set-server=utf8mb4
+            - --collation-server=utf8mb4_unicode_ci
         healthcheck:
-            test:
-                - CMD
-                - mysqladmin
-                - ping
-                - '-p${DB_PASSWORD}'
-            retries: 3
+            test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+            interval: 5s
             timeout: 5s
+            retries: 5
+        networks:
+            - app_network
+
     redis:
-        image: 'redis:alpine'
+        image: redis:alpine
+        container_name: ${DB_DATABASE}_redis
+        restart: always
         ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
+            - "${FORWARD_REDIS_PORT:-6379}:6379"
         volumes:
-            - 'sail-redis:/data'
+            - redis-data:/data
         networks:
-            - sail
+            - app_network
         healthcheck:
-            test:
-                - CMD
-                - redis-cli
-                - ping
+            test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
-    meilisearch:
-        image: 'getmeili/meilisearch:latest'
-        ports:
-            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
-        volumes:
-            - 'sail-meilisearch:/meili_data'
-        networks:
-            - sail
-        healthcheck:
-            test:
-                - CMD
-                - wget
-                - '--no-verbose'
-                - '--spider'
-                - 'http://localhost:7700/health'
-            retries: 3
-            timeout: 5s
-    mailpit:
-        image: 'axllent/mailpit:latest'
-        ports:
-            - '${FORWARD_MAILPIT_PORT:-1025}:1025'
-            - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
-        networks:
-            - sail
-    selenium:
-        image: selenium/standalone-chrome
-        extra_hosts:
-            - 'host.docker.internal:host-gateway'
-        volumes:
-            - '/dev/shm:/dev/shm'
-        networks:
-            - sail
+
 networks:
-    sail:
+    app_network:
         driver: bridge
+
 volumes:
-    sail-mysql:
+    db-data:
         driver: local
-    sail-redis:
-        driver: local
-    sail-meilisearch:
+    redis-data:
         driver: local
