--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,22 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^v1.0",
-        "laravel/framework": "^v11.0",
+        "php": "^8.3",
+        "guzzlehttp/guzzle": "^7.9",
+        "inertiajs/inertia-laravel": "^v2.0",
+        "laravel/framework": "^v12.0",
         "laravel/sanctum": "^v4.0",
-        "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0"
+        "laravel/tinker": "^2.10",
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^v2.0",
+        "fakerphp/faker": "^1.24",
+        "laravel/breeze": "^v2.3",
         "laravel/pint": "^1.21",
         "laravel/sail": "^1.41",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.6",
+        "phpunit/phpunit": "^11.5"
     },
     "autoload": {
         "psr-4": {
